# guardrail-fabric

./: Makefile  README.md  pyproject.toml
.prophet/: hardening.yaml
docs/: GUARDRAIL_FABRIC.md  PROFESSIONAL_INTELLIGENCE_GUARDRAILS.md  RELEASE_DRY_RUN.md  devsecops-workroom-adversarial-aiops-fixtures.md  governed-intelligence-admission-policy.md  repo-local-hook-installer.md  sourceos-agent-reliability-control-plane.md  trustops-preflight-handoff.md  trustops-runtime-action-mapping.md  trustops-safety-preflight.md  v0.2-breaking-change-policy.md
examples/: guardrail-decision.example.json  guardrail-input.example.json  guardrail-policy.example.json  superconscious-reasoning-policy.example.json
guardrail_fabric/: __init__.py  claim_admission.py  decision.py  device_orchestration_policy.py  event_capability_cli.py  event_capability_policy.py  hooks.py  log.py  policies.py  preflight_handoff.py  project_hooks.py  safety_preflight.py  simulate.py  trustops_runtime_actions.py
guardrail_fabric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
schemas/: devsecops_workroom_adversarial_aiops.v0_1.schema.json  professional-intelligence-guardrail-pack.schema.json  sourceos.guardrail.decision.v0.1.schema.json  trustops-guardrail-action-decision.v0.1.schema.json  wallguard-guardrail-binding.v0.1.schema.json
scripts/: validate_devsecops_workroom_adversarial_aiops.py  validate_professional_intelligence_guardrails.py
tests/: test_claim_admission.py  test_decision.py  test_device_orchestration_policy.py  test_event_capability_policy.py  test_hooks.py  (+8 more)
(+35 files in other folders)
